--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,8 @@ steps:
 
   - script: |
       git config --global --add url."git@github.com:".insteadOf "https://github.com/"
-      git config --local user.email "<mymail@domain.com>"
-      git config --local user.name "<username>"
+      git config --local user.email "<mrigankasaha2@gmail.com>"
+      git config --local user.name "Mrigankasaha2"
       npm install --no-audit --progress=false      
       npm run deploy
     displayName: "npm install and deploy"
