--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     inputs:
       knownHostsEntry: "https://mrigankasaha2.github.io/my-portfolio/"
       sshPublicKey: "SHA256:oGac9Dcze4xDmEgYI49q7QErOSWAx9fKnfHMfVZRQpo"
-      sshPassphrase: "$(publishkey)"
+      sshPassphrase: "12345"
       sshKeySecureFile: "8208727c-55da-4940-be73-361fe35d70a1"
 
   - script: |
